0.7.0.24
Issue #1186 New-BcContainer cannot import test toolkit from 16.0 onprem artifacts

0.7.0.23
Issue #1180 New-BcContainerWizard doesn't work in 0.7.0.18 - 0.7.0.22 (if NavContainerHelper is installed in standard path)

0.7.0.22
Issue #1174 building image defaults to hyperv even if hyperv isn't installed

0.7.0.21
Issue #1160 autobuilding image fails if there is only one image on the machine before building

0.7.0.20
Issue #1156 Add mode ForceSync to Sync-BcContainerApp
Issue #1157 Regression: autobuilding of some local images will fail on installing test toolkit subsequently

0.7.0.19
Issue #1150 alc fails if project path ends in a \
Issue #1153 regression - Test-BcContainer fails due to container name clashes
Adding parameter sqlMemoryLimit to New-BcContainer (can be set like 50%, 1.5G or 1500M)
Regression: autobuilding images will fail trying to pull images it just built

0.7.0.18
Optimizations in New-BcContainer - avoid multople docker command invokes
New-BcContainerWizard opens PowerShell prompt for wizard
Refactor code behind New-BcContainerWizard to be more "wizard"-like
Only use 7zip if newer than version 19
Add global config option use7zipIfAvailable to bypass 7zip

0.7.0.17
Issue #1130 Regression in download-file

0.7.0.16
Issue #1107 Add hostOsVersion parameter to Get-BestGenericImageName
Back on ConnectionString or bakfile question doesn't work in New-BcContainerWizard
Use 7zip if available to expand archives on host
TimeoutWebClient dotnet type was sometimes double added, causing an exception

0.7.0.15
Back and Start Over doesn't work when running New-BcContainerWizard

0.7.0.14
Issue #1088 Concurrency issues in NavContainerHelper
Added default path to filename in New-BcContainerWizard
Added default parameters for NewContainer (example $navContainerHelperConfig.defaultNewContainerParameters = @{ "updatehosts" = $true })
Issue #1100 docker inspect displays shows error if image doesn't exist